--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,5 @@ services:
         ports:
             - "5901:5901"
             - "6901:6901"
+        environment:
+            - VNC_PASSWORD=${VNC_PASSWORD}
